--- a/lapack-jni/bindgen/Makefile
+++ b/lapack-jni/bindgen/Makefile
@@ -1,16 +1,23 @@
-CLANG_LEVEL := ../..
+CXX = clang
+CXXFLAGS += -std=c++11 -I/usr/lib/llvm-3.5/include -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS
+LDFLAGS += -lclang -lLLVM-3.5 -lLTO -lz -lpthread -lcurses -ldl -lm -lstdc++
 
-TOOLNAME = bindgen
+USEDLIBS = \
+    clangFrontend.a clangSerialization.a clangDriver.a \
+    clangTooling.a clangParse.a clangSema.a \
+    clangAnalysis.a clangRewriteFrontend.a clangRewrite.a \
+    clangEdit.a clangAST.a clangLex.a clangBasic.a \
+    LLVMSupport.a clangASTMatchers.a
 
-SOURCES := bindgen.cpp
+LIB = /usr/lib/llvm-3.5/lib
+LIBS = $(addprefix $(LIB)/lib,$(USEDLIBS))
+#LIBS = $(wildcard $(LIB)/*.a)
 
-include $(CLANG_LEVEL)/../../Makefile.config
+bindgen: bindgen.o
+	$(CXX) -g $(CXXFLAGS) -o $@ $^ $(LIBS) $(LDFLAGS)
 
-LINK_COMPONENTS := $(TARGETS_TO_BUILD) asmparser bitreader support mc option
- 
-USEDLIBS = clangFrontend.a clangSerialization.a clangDriver.a \
-           clangTooling.a clangParse.a clangSema.a \
-           clangAnalysis.a clangRewriteFrontend.a clangRewriteCore.a \
-	   clangEdit.a clangAST.a clangLex.a clangBasic.a
+bindgen.o: bindgen.cpp
+	$(CXX) -g $(CXXFLAGS) -o $@ -c $^
 
-include $(CLANG_LEVEL)/Makefile
+clean:
+	-rm bindgen.o bindgen
